--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,59 +1,52 @@
 {
-    "title": "اكتشف حكايتك عبر الذكاء الاصطناعي",
-    "subtitle": "ادخل عالم الحِكمة القديمة، واكتشف حيوانك الرمزي من حكايات \"كَليلة ودِمْنَة\"!",
+    "title": "من أنا بين أبطال كليلة ودِمنة؟",
+    "subtitle": "انطلق في رحلة ممتعة داخل عالم كليلة ودمنة، واكتشف الشخصية التي تشبهك في هذه الحكايات الرائعة!",
     "enterName": "أدخل اسمك",
-    "startQuiz": "ابدأ الاختبار",
+    "startQuiz": "الاختبار",
     "quiz": {
         "q0": {
-            "text": "ما هي الشخصية التي تفضلها في القصة؟",
-            "a1": "ولد",
-            "a2": "فتاة"
+            "text": "ماذا تفعل عندما ترى صديقين يتشاجران؟",
+            "a1": "أحاول أن أساعدهما على التفاهم مرة أخرى  الفيل",
+            "a2": "أبتعد عنهما ولا أهتم بالأمر  الثعلب",
+            "a3": "أقول فكاهة تضحكهما  القرد",
+            "a4": "أحدثهما بكلمات لطيفة لتهدئة الموقف  البطة"
         },
         "q1": {
-            "text": "ماذا تفعل إذا رأيت صديقين يتشاجران؟",
-            "a1": "أحاول أن أساعدهما على التفاهم",
-            "a2": "أبتعد، فالأمر لا يعنيني",
-            "a3": "أتدخّل وأُلقي نكتة لتخفيف التوتر",
-            "a4": "أهدّئهما بكلمات لطيفة"
+            "text": "ما هي القوة الخارقة التي تحب أن تمتلكها؟",
+            "a1": "قوة لا تُقهر  الأسد",
+            "a2": "سرعة هائلة مثل البرق  الأرنب",
+            "a3": "القدرة على حمل الأشياء الثقيلة وحماية من أحب  الثور",
+            "a4": "العمر الطويل والعيش في هدوء  السلحفاة"
         },
         "q2": {
-            "text": "ما هي القوة الخارقة التي تودّ امتلاكها؟",
-            "a1": "قوة لا تُقهر",
-            "a2": "السرعة الخارقة",
-            "a3": "القدرة على حمل الأشياء الثقيلة وحماية الآخرين",
-            "a4": "العمر الطويل والهدوء الدائم"
+            "text": "كيف تتخذ قراراتك؟",
+            "a1": "أفكر بهدوء قبل أي قرار  الفيل / السلحفاة",
+            "a2": "أتصرف بناءً على إحساسي  الثعلب / الأرنب",
+            "a3": "أستشير أصدقائي وأستمع لآرائهم  البطة / القرد",
+            "a4": "ألتزم بالقوانين لأنني أحب النظام  الثور / الأسد"
         },
         "q3": {
-            "text": "كيف تتخذ قراراتك؟",
-            "a1": "أفكر جيداً قبل أن أتصرف",
-            "a2": "أتصرف بناءً على إحساسي",
-            "a3": "أستشير أصدقائي",
-            "a4": "ألتزم بالقواعد"
+            "text": "من هو الصديق المفضّل بالنسبة لك؟",
+            "a1": "الصديق الذي يبقى بجانبي دائماً  الحمامة",
+            "a2": "الصديق الذي يرسم الابتسامة على وجوه الجميع القرد",
+            "a3": "الصديق الذي يساعدني في الأوقات الصعبة الثور",
+            "a4": "الصديق الذي يتصرف بذكاء الثعلب"
         },
         "q4": {
-            "text": "ما نوع المغامرة التي تحلم أن تخوضها؟",
-            "a1": "استكشاف غابة خفية",
-            "a2": "حلّ لغز في قلعة غامضة",
-            "a3": "مساعدة صديق لعبور النهر",
-            "a4": "تسلّق جبل شاهق",
-            "a5": "زيارة مكان مليء بالسحر والعجائب"
+            "text": "عندما يحدث شيء مفاجئ، كيف تتصرف؟",
+            "a1": "آخذ نفساً عميقاً وأفكر بهدوء  الفيل",
+            "a2": "أتصرف بسرعة دون تفكير  الثعلب",
+            "a3": "احتفظ بهدوئي وأنتظر الوقت المناسب  السلحفاة",
+            "a4": "أطلب النصيحة أو المساعدة من الآخرين  البطة"
         },
-        "q5": {
-            "text": "أين تودّ أن تدور أحداث قصتك؟",
-            "a1": "أدغال مليئة بالحيوانات الأليفة والمعلّمين الحكماء الذين يساعدونك على تعلّم دروس مهمة",
-            "a2": "قصر ذهبي تجري فيه أحداث عظيمة، وتحمل كل قصة مغزى قوي",
-            "a3": "حديقة هادئة بها طيور جميلة وحكايات تُثير التفكير والتأمّل",
-            "a4": "ممتعة غير متوقَّعة غابة طريفة تتحدث فيها الحيوانات بأشعار فكاهية، ولكل حكاية فيها نهاية"
-        },
-        "loader1": "لقد تعرفنا الآن على حيوانك الرمزي. فهيا نكتشف مغامرتك السحرية!",
-        "loader2": "لنكتشف معاً حيوانك الرمزي، وننطلق في مغامرة فريدة من نوعها!"
+        "loader1": "الآن، هيا بنا نتعرف على الشخصية التي تشبهك!"
     },
-    "Spirit Animal": "الحيوان الرمزي",
+    "Character Match": "الشخصية التي تشبهك هي",
     "Adaptation": "النسخة السردية",
     "Your story": "عنوان قصتك",
     "Moral": "الحكمة المستفادة",
     "Print my story": "اطبع قصتي",
-    "Receive by email": "أرسلها بالإيميل",
+    "Send by email": "إرسال بالبريد الإلكتروني",
     "adaptation": {
         "indian": "الهندية",
         "arabic": "العربية",
@@ -62,39 +55,25 @@
     },
     "animals": {
         "elephant": "الفيل",
-        "jackal": "الثعلب",
         "monkey": "القرد",
         "duck": "البطة",
         "lion": "الأسد",
         "hare": "الأرنب",
         "ox": "الثور",
-        "turtle": "السلحفاة"
+        "turtle": "السلحفاة",
+        "dove": "الحمامة",
+        "fox": "الثعلب"
     },
     "traits": {
-        "brave": "شجاع",
-        "loyal": "وفيّ",
-        "protector": "يحمي الآخرين",
-        "clever": "ذكي",
-        "strategic": "صاحب بصيرة",
-        "fast_thinker": "سريع البديهة",
-        "wise": "حكيم",
-        "calm": "هادئ",
-        "strong_hearted": "قوي الإرادة",
-        "kind": "طيبة",
-        "peace_maker": "مسالمة",
-        "gentle": "حنون",
-        "patient": "صبورة",
-        "reflective": "متأمّلة",
-        "peaceful": "هادئة",
-        "fast": "سريع",
-        "fun": "مرِح",
-        "impulsive": "مندفع",
-        "steady": "ثابت",
-        "hardworking": "مثابر",
-        "dependable": "يمكن الاعتماد عليه",
-        "playful": "لعوب",
-        "creative": "مبدع",
-        "witty": "خفيف الظل"
+       "lion": "you are as brave as a lion!",
+        "elephant": "you are as wise as an elephant!",
+        "duck": "you are as kind as a duck!",
+        "turtle": "you are as calm as a turtle!",
+        "hare": "you are as fast as a hare!",
+        "ox": "you are as dependable as an ox!",
+        "monkey": "you are as playful as a monkey!",
+        "dove": "you are as loyal as a dove!",
+        "fox": "you are as clever as a fox!"
     },
     "Successfully sent your story!": "تم إرسال قصتك بنجاح!",
     "Send story to your email": "تم إرسال القصة إلى بريدك الإلكتروني",
