--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -6,38 +6,38 @@
     "quiz": {
         "q0": {
             "text": "ماذا تفعل عندما ترى صديقين يتشاجران؟",
-            "a1": "أحاول أن أساعدهما على التفاهم مرة أخرى  الفيل",
-            "a2": "أبتعد عنهما ولا أهتم بالأمر  الثعلب",
-            "a3": "أقول فكاهة تضحكهما  القرد",
-            "a4": "أحدثهما بكلمات لطيفة لتهدئة الموقف  البطة"
+            "a1": "أحاول أن أساعدهما على التفاهم مرة أخرى",
+            "a2": "أبتعد عنهما ولا أهتم بالأمر",
+            "a3": "أقول فكاهة تضحكهما",
+            "a4": "أحدثهما بكلمات لطيفة لتهدئة الموقف"
         },
         "q1": {
             "text": "ما هي القوة الخارقة التي تحب أن تمتلكها؟",
-            "a1": "قوة لا تُقهر  الأسد",
-            "a2": "سرعة هائلة مثل البرق  الأرنب",
-            "a3": "القدرة على حمل الأشياء الثقيلة وحماية من أحب  الثور",
-            "a4": "العمر الطويل والعيش في هدوء  السلحفاة"
+            "a1": "قوة لا تُقهر",
+            "a2": "سرعة هائلة مثل البرق",
+            "a3": "القدرة على حمل الأشياء الثقيلة وحماية من أحب",
+            "a4": "العمر الطويل والعيش في هدوء"
         },
         "q2": {
             "text": "كيف تتخذ قراراتك؟",
-            "a1": "أفكر بهدوء قبل أي قرار  الفيل / السلحفاة",
-            "a2": "أتصرف بناءً على إحساسي  الثعلب / الأرنب",
-            "a3": "أستشير أصدقائي وأستمع لآرائهم  البطة / القرد",
-            "a4": "ألتزم بالقوانين لأنني أحب النظام  الثور / الأسد"
+            "a1": "أفكر بهدوء قبل أي قرار",
+            "a2": "أتصرف بناءً على إحساسي",
+            "a3": "أستشير أصدقائي وأستمع لآرائهم",
+            "a4": "ألتزم بالقوانين لأنني أحب النظام"
         },
         "q3": {
             "text": "من هو الصديق المفضّل بالنسبة لك؟",
-            "a1": "الصديق الذي يبقى بجانبي دائماً  الحمامة",
-            "a2": "الصديق الذي يرسم الابتسامة على وجوه الجميع القرد",
-            "a3": "الصديق الذي يساعدني في الأوقات الصعبة الثور",
-            "a4": "الصديق الذي يتصرف بذكاء الثعلب"
+            "a1": "الصديق الذي يبقى بجانبي دائماً",
+            "a2": "الصديق الذي يرسم الابتسامة على وجوه الجميع",
+            "a3": "الصديق الذي يساعدني في الأوقات الصعبة",
+            "a4": "الصديق الذي يتصرف بذكاء"
         },
         "q4": {
             "text": "عندما يحدث شيء مفاجئ، كيف تتصرف؟",
-            "a1": "آخذ نفساً عميقاً وأفكر بهدوء  الفيل",
-            "a2": "أتصرف بسرعة دون تفكير  الثعلب",
-            "a3": "احتفظ بهدوئي وأنتظر الوقت المناسب  السلحفاة",
-            "a4": "أطلب النصيحة أو المساعدة من الآخرين  البطة"
+            "a1": "آخذ نفساً عميقاً وأفكر بهدوء",
+            "a2": "أتصرف بسرعة دون تفكير",
+            "a3": "احتفظ بهدوئي وأنتظر الوقت المناسب",
+            "a4": "أطلب النصيحة أو المساعدة من الآخرين"
         },
         "loader1": "الآن، هيا بنا نتعرف على الشخصية التي تشبهك!"
     },
